...
    case owned    = "Own Outright"
    case financing = "Financing"
    case leasing  = "Leasing"
}

enum MaintenanceType: String, CaseIterable, Codable {
    case oilChange         = "Oil Change"
    case tireRotation       = "Tire Rotation"
    case tireReplacement    = "Tire Replacement"
    case brakePads          = "Brake Pads"
    case transmissionFluid  = "Transmission Fluid"
    case airFilter          = "Air Filter"
    case other              = "Other"
...
